# Meccanum

./: .gitignore  Design.pptx  Drivetrains.xlsx  README.md  i2cSlave.py  pinRegisterDiagnostic.py  raspberrypi.py
GameController/: buggy.py  client.py  command_serializer.py  control_pad.py  main.py  messenger.py  mqttClient1.py  pyvenv.cfg  requirements.txt
KiCad/: Buggy.kicad_pcb  Buggy.kicad_prl  Buggy.kicad_pro  Buggy.kicad_sch  DriveTrain.kicad_sch  Drive_Train.kicad_sch  battery_monitor.kicad_sch  fp-info-cache
Meccanum/: HornTest.py
Movement/: Meccanum.cpp  main.cpp
WiringCheck/: CMakeLists.txt  (+2 more)
rp2/: CMakeLists.txt  chassis.cpp  chassis.h  i2cCommandReceiver.cpp  i2c_handler.cpp  launch.json  main.cpp  mcp23017.cpp  mcp23017.h  meccanum.cpp  meccanum.h  registers.h  rp2.cpp  serialComamndReceiver.cpp  settings.json
rp2/chassis/: AxisState.cpp  AxisState.h  CMakeLists.txt  axisState.cpp  chassis.cpp  chassis.h  movement.cpp  movement.h  movementAxis.cpp  movementAxis.h  updatedValuesEventListener.h  velocity.cpp  velocity.h
rp2/control/: CMakeLists.txt  controlPin.h  mcp23017_ControlPin.h
rp2/i2cCommandReceiver/: CMakeLists.txt  i2cBuffer.cpp  i2cBuffer.h  i2cCommandReceiver.cpp  i2cCommandReceiver.h  memoryRegister.cpp  memoryRegister.h  registers.h
rp2/i2cMultiplexer/: CMakeLists.txt  i2cMultiplexedChannel.cpp  i2cMultiplexedChannel.h  i2cMultiplexer.cpp  i2cMultiplexer.h
rp2/ioExtenders/: CMakeLists.txt  mcp23017.cpp  mcp23017.h  mcp23017_ControlPin.cpp  mcp23017_ControlPin.h
rp2/motors/: CMakeLists.txt  motor.h  openLoop.cpp  openLoop.h
(+16 files in other folders)
